// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts basic class render 1`] = `
<div
  class="basic-class class"
>
  <div
    class="group"
    id="group-id"
  >
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      class="empty"
    />
  </div>
</div>
`;

exports[`converts basic pure render 1`] = `
<div
  class="basic-pure pure"
>
  <div
    class="group"
    id="group-id"
  >
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      class="empty"
    />
  </div>
</div>
`;

exports[`converts class components with render returning top level arrays 1`] = `
Array [
  <div
    class="test"
  >
    Test
  </div>,
  <div
    class="test2"
  >
    Test 2
  </div>,
  <div
    class="child"
  >
    <strong>
      Hello!
    </strong>
  </div>,
]
`;

exports[`converts function components with render returning top level arrays 1`] = `
Array [
  <div
    class="test"
  >
    Test
  </div>,
  <div
    class="test2"
  >
    Test 2
  </div>,
  <div
    class="child"
  >
    <strong>
      Hello!
    </strong>
  </div>,
]
`;

exports[`handles a component which returns null 1`] = `null`;

exports[`renders multiple elements as a result of find 1`] = `
Array [
  <li>
    0
  </li>,
  <li>
    1
  </li>,
]
`;

exports[`renders the whole list 1`] = `
<ul>
  <li>
    0
  </li>
  <li>
    1
  </li>
</ul>
`;
